@@ -1,3 +1,7 @@
+2006-02-07  Jakub Steiner <jimmac@ximian.com>
+
+	* index.theme.in: add animations context
+
 2006-02-06  Rodney Dawes  <dobey@novell.com>
 
 	* NEWS:
